fixes for firefox

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </ul>
                 </div>
             </div>
-            <input type="email" name="email" placeholder="Ваш e-mail" class="ordering-form__input">
+            <input type="email" name="email" placeholder="Ваш e-mail" class="ordering-form__input email-input">
             <input type="text" name="user-name" placeholder="Ваше имя" class="ordering-form__input">
         </form>
         <div class="ordering-block">
@@ -150,7 +150,7 @@
                 <div><img src="img/kiwi.svg" alt="Qiwi wallet"></div>
                 <p>QIWI wallet</p>
             </div>
-            <div class="footer-payment__money">
+            <div class="footer-payment__money yandex-money">
                 <div><img src="img/yandex.svg" alt="Yandex money"></div>
                 <p>Yandex Money</p>
             </div>
@@ -160,7 +160,7 @@
             </div>
         </div>
         <div class="footer-contact">
-            <a class="footer-contact__link" href="https://mail.ru/">
+            <a class="footer-contact__link mail-link" href="https://mail.ru/">
                 <img class="footer-contact__link-img" src="img/mail.svg" alt="Mail">
                 info@ipsum228.com
             </a>
