--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <input type="email" name="email" placeholder="Ваш e-mail" class="ordering-form__input email-input">
-            <input type="text" name="user-name" placeholder="Ваше имя" class="ordering-form__input">
+            <input type="text" name="user-name" placeholder="Ваше имя" class="ordering-form__input name-input">
         </form>
         <div class="ordering-block">
             <div class="ordering-percent">
